{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Movement",
            "id": "c309ea8e-0cfe-4618-b4eb-908fb123246d",
            "actions": [
                {
                    "name": "Direction",
                    "type": "Value",
                    "id": "8944ebbe-3e9e-42a2-9c25-5618dc98bd18",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a1fa0ea0-6120-4bb6-9ffc-b50e9619d4f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "9b397517-c7f8-4327-bb5f-471abb37cfc0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c4ad92e1-5fec-48d8-ba40-d16a230a1e29",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8ca98fed-6a24-4b7d-bdc6-cf954a64a9ab",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ceac1396-1eed-41e7-a9b5-289e802d910a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "648dc147-c5ae-4697-ad2d-d3202cdea9f0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a54c2154-c9fb-418c-9e02-6087b98b61c5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Attack",
            "id": "58daa756-491b-4561-be36-01ca82851a3b",
            "actions": [
                {
                    "name": "Melee",
                    "type": "Button",
                    "id": "dbb0a3ae-0b2c-41e8-8d64-e8d6b48836c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Magic",
                    "type": "Button",
                    "id": "2ae51ad7-5d31-4e8d-bf29-0b6b0fe3a4a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DEBUG_Heal",
                    "type": "Button",
                    "id": "85751918-fa5c-4c16-b188-e539b859c9d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DEBUG_Damage",
                    "type": "Button",
                    "id": "edde4247-fefe-45ec-9b36-66bd41d46f23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae599b7e-1d00-4d5f-8b12-805a5f2de6e8",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Melee",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5dec1687-279c-4a94-aa85-d0d46eff9f70",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1742a39d-fe34-4f33-b112-ec75c8efa5bf",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DEBUG_Heal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c638940-d40d-47a4-a5f0-cdc3efc57835",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DEBUG_Damage",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "0ed93393-db65-4106-b1a7-0cc87d7c1e11",
            "actions": [
                {
                    "name": "UP",
                    "type": "Button",
                    "id": "06b94339-108b-4691-8fbf-2141217a1beb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DOWN",
                    "type": "Button",
                    "id": "72a4a135-a611-431e-9b21-ff7f7d0fccf9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CONFIRM",
                    "type": "Button",
                    "id": "228cd6bc-87a0-4350-9c01-d026d07dffd6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "657e0829-0e0d-4c99-82b5-3e366574b92c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e9b5f12-3049-4d1e-b954-5e68c66ed7f6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DOWN",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ccc6c1c-e081-40a2-a4a9-594d4900e5f9",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CONFIRM",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}